<resources>
    <string name="app_name">Weather</string>
    <string name="exit_app">再按一次退出程序</string>

    <!--主页-->
    <string name="next_15_days_label">15日天气</string>
    <string name="current_weather">当日天气</string>
    <string name="humidity_label">湿度: </string>
    <string name="wind_label">风力</string>
    <string name="next_5_days_daily">5天预报</string>
    <string name="city">管理城市</string>
    <string name="more">更多</string>
    <string name="title">温馨提示</string>
    <string name="delete_city">是否删除当前城市？</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="temp">℃</string>
    <string name="percent">%</string>

    <!--setting-->
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">检查更新</string>
    <string name="no_version">已经是最新版本啦~</string>
    <string name="new_version">有最新版本可更新：</string>
    <string name="check_update_fail">检查新版本失败</string>
    <string name="down_load_fail">下载安装包失败</string>
    <string name="updating">正在更新</string>
    <string name="done">确定</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip"></string>
    <string name="copyright_summary">仅作个人学习及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">WjxBless</string>
    <string name="project_address">项目源码</string>
    <string name="csdn博客">个人博客</string>
    <string name="github_url">https://github.com/wangjianxiandev/Weather</string>


    <!--feed back-->
    <string name="error_message">发生了一些错误</string>
    <string name="empty_message">没有数据哎~</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>